update containees
